--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ body{
 }
 
  .navbar a {
-     font-size: 2rem;
+     font-size: 1.5rem;
     }
     .navbar a:hover {
         color: var(--main-color)!important;
@@ -103,7 +103,7 @@ body{
 }
 .temp_form  input[type = "text"]{
     width: 100%;
-    padding: 1rem;
+    padding: 1rem 31px;
     background-color: var(--main-bg);
     color: #fff;
     outline: none;
@@ -221,4 +221,8 @@ footer p {
         height: auto;
         margin-top: 3rem;
     }
+    
+.main_content{
+    width: 100% !important;
+}
 }
