--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -9,21 +9,21 @@
     <!-- main -->
     <div class="container-fluid main_header">
         <div class="row ">
-            <div class="col-md-12 col-12">
-                <div class="main_content">
-                    <form action="" class="temp_form">
-                        <input type="text" name="" id="cityname" placeholder="Enter your city name" required>
-                        <input type="submit" value="Seacrh" id="submitBtn">
+            <div class="col-md-12 col-12 ">
+                <div class="  ">
+                    <form action="" class="temp_form main_content ">
+                        <input type="text" name="" id="cityname" placeholder="Enter your city name">
+                        <input type="submit" value="Search" id="submitBtn" class="">
                     </form>
                 </div>
 
-                <div class="tempInformation w-25">
+                <div class="tempInformation w-25 main_content">
                     <div class="top_layer">
                         <p id="day"></p>
                         <p id="today_data"></p>
                     </div>
                     <div class="main_layer ">
-                        <p id="city_name" class="text-capitalize..">get output here</p>
+                        <p id="city_name" class="text-capitalize">get output here..</p>
                         <div class="middle_layer data_hide">
                             <p id="temp" class=" font-900"><span style="font-size: 4rem;">Temp</span>° C</p>
                             <p class="text-white" id="temp_status"><i class="fa fa-cloud text-white"
@@ -53,6 +53,17 @@
         setInterval(date, 1000);
        
     </script>
+     <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
