--- a/templates/partials/headerlinks.hbs
+++ b/templates/partials/headerlinks.hbs
@@ -9,5 +9,5 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- custom style sheet-->
     <link rel="stylesheet" href="./css/style.css">
-    <title>Wheather App</title>
+    <title>Weather App</title>
 </head>
