--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -2,7 +2,7 @@
         <div class="row">
             <div class="col-lg-10 mx-auto ">
                 <nav class="navbar  navbar-expand-lg navbar-dark bg-dark font-100">
-                    <a class="navbar-brand text-capitalize mx-3" href="#"> <i class="far fa-snowflake "></i> current wheather <i
+                    <a class="navbar-brand text-capitalize mx-3" href="#"> <i class="far fa-snowflake "></i> current weather <i
                             class="far fa-snowflake"></i></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
